fantasyStocks/static/style.css
.titlebar {
    height: 50px;
    background-color: #aaaaaa;
    font-family: monospace;
}
.logo {
    margin-left: 15px;
    font-size: 1.15em;
    color: black;
}

.rightnavbutton {
    padding-left: 15px;
    float: right;
    border-left: 1px solid black;
    height: 100%;
    margin-right: 15px;
}

.verticalcenter {
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
    -moz-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    -webkit-transform: translate(0, -50%);
}

#loginBoxes {
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
}

.loginBox {
    border-radius: 5px;
    padding: 30px;
    position: relative;
}

.loginTable { 
    margin-left: auto;
    margin-right: auto;
}

.loginTable td {
    width: 50%;
    border: 2px solid #aaaaaa;
    border-radius: 5px;
    height: 100%;
}

.submit {
    position: absolute;
    right: 15px;
}

.loginBox td {
    border: none;
}

.error {
    color: red;
    font-size: small;
}

.errorlist {
    font-size: x-small;
}

.tabs {
    padding-right: 15px;
}

.tabs li {
    list-style-type: none;
    margin-bottom: 15px;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    border-top: 1px solid black;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    padding: 5px;
    padding-right: 15px;
    cursor: pointer;
    line-height: 1.5;
}

.selected {
    background-color: #cccccc;
}

.floorContainer {
    width: 85%;
}

.dash {
    width: 100%;
}

/* Without this, the tabs on the Dasboard will be too far from the side of the page. */
.tabs > ul {
    padding-left: 0px;
    text-align: right;
}

.green {
    color: green;
}

.red { 
    /* Since this is shown on a black background, it should probably be a little less jarring. I don't know 
     * how to do that though. I'll do some searching. */ 
    color: red;
}

.blue {
    color: #8A8AE6;
}

.stockBoard {
    width: 100%;
    border-radius: 5px;
    border: 1px solid black;
    border-collapse: collapse;
    background-color: black;
    color: white;
}

.stockBoard td {
    border: 1px solid white;
    padding: 3px;
}

.leaderBoard {
    width: 100%;
    border: 1px solid black;
    border-radius: 5px;
    border-collapse: none;
}

.leaderBoard td {
    border-bottom: 1px solid black;
}

.dash td {
    vertical-align: top;
}

.floorSelection {
    margin-right: auto;
    margin-left: auto;
}

a.full {
    display: block;
    height: 100%;
}

.floorSelection tr {
    background-color: #CCCCCC;
    cursor: pointer;
}

.floorSelection td {
    padding: 10px;
    text-align: center;
}


.floorSelection tr:hover {
    background-color: #BBBBBB;
}

.head>tr {
    cursor: default;
}

.head>tr:hover {
    background-color: #CCCCCC;
}

a.noUnderline {
    text-decoration: none;
    color: inherit;
}

.tt-menu {
    background-color: white;
    border: 2px outset black;
}

.holder {
    min-height: 150px;
    width: 200px;
    border: 3px inset grey;
    margin-bottom: 10px;
}

.tt-cursor {
    background-color: lightgrey !important;
}

.stockBox {
    display: none;
}

.holder .selection {
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
    border: 1px solid black;
    background-color: #9FBCDA;
    width: 100%;
    margin-bottom: 5px;
    cursor: default;
}

.redBackground {
    background-color: red !important;
}

.tradeHolder {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    position: relative;
}

.userStock {
    color: black;
    background-color: white;
}

.trade {
    width: 100%;
}

.trade td {
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    border-collapse: collapse; 
}

.tradeInbox {
    width: 100%;
}

.tradeTab {
    display: inline-block;
    float: left;
    margin-right: 25px;
    border-top: 1px solid black;
    border-right: 1px solid black;
    border-left: 1px solid black;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    padding-top: 5px;
    padding-left: 5px;
    padding-right: 5px;
    cursor: default;
}

.unselectable {
    /* Someday, CSS will be so nice. */
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

img.flipped {
    /* Someday... */
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: FlipH;
}

.deleteImage {
    width: 20px;
    float: right;
    padding-top: 2px;
}

.confirmationBox {
    background-color: white;
    border: 2px solid grey;
    border-radius: 5px;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    min-width: 350px;
    top: 20%;
    left: 25%;
    padding: 15px;
}

.confirmationButton {
    background-color: lightgrey;
    color: black;
    border: 2px solid black;
    border-radius: 5px;
    display: inline-block;
    padding: 5px;
    margin: 10px;
}

#userFloors {
    width: 75%;
    border: 5px inset grey;
}

.defaultCursor {
    cursor: default;
}

.stockPrice { 
    display: inline-block; 
    float: right;
}

.loadingPrice { 
    width: 10%;
}

